fixed minor css issues for readability while testing

--- a/src/styles/components/sectionfooter.css
+++ b/src/styles/components/sectionfooter.css
@@ -1,7 +1,7 @@
 .footer {
   display: flex;
   bottom: 1rem;
-  position: fixed;
+
   flex-direction: column;
 
   gap: 1rem;
